# learning_in_games

./: README.md  demo.ipynb  pyproject.toml  requirements.txt  vector_field_plots.ipynb
learning_in_games/: __init__.py  agents.py  games.py  plotting.py  running.py  utilities.py
